# descriptor-wallet

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  fuck.psbt  license_header  pandoracore-test.psbt  requirements.txt
.github/workflows/: build.yml  codecov.yml  lint.yml  mobile.yml  publication.yml  test.yml
blockchain/: Cargo.toml
blockchain/src/: lib.rs
contrib/: depCargo.toml  test.sh
descriptors/: Cargo.toml
descriptors/src/: contract.rs  deduction.rs  derive.rs  descriptor.rs  descriptors2.rs  generator.rs  input.rs  legacy.rs  lib.rs  locks.rs  script.rs  templates.rs  tweaks.rs  typesystem.rs
hd/: Cargo.toml
hd/src/: account.rs  components.rs  derive.rs  indexes.rs  lib.rs  path.rs  pubkeychain.rs  range.rs  ranges.rs  schemata.rs  segments.rs  standards.rs  traits.rs  unsatisfiable.rs  upstream.rs  xkey.rs  xpubref.rs
hdw/: Cargo.toml
hdw/src/: components.rs  path.rs  pubkeychain.rs  range.rs  traits.rs  xpubref.rs
libbitcoin/: Cargo.toml
libbitcoin/src/: helpers.rs  lib.rs  signer.rs
onchain/: Cargo.toml
onchain/src/: blockchain.rs  lib.rs  network.rs
onchain/src/resolvers/: electrum.rs  mod.rs
psbt/: Cargo.toml  README.md
psbt/src/: construct.rs  deduction.rs  errors.rs  global.rs  input.rs  iter.rs  lex_order.rs  lib.rs  output.rs  p2c.rs  proprietary.rs  psbt.rs  signer.rs  structure.rs  types.rs  util.rs
psbt/src/commit/: lnpbp4.rs  mod.rs  opret.rs  p2c.rs  tapret.rs
psbt/src/construct/: mod.rs
psbt/src/modern/: errors.rs  input.rs  mod.rs  output.rs  psbt.rs
psbt/src/sign/: inmem.rs  mod.rs  signer.rs
psbt/src/util/: deduction.rs  lex_order.rs  mod.rs
psbt/src/v2/: input.rs  mod.rs  output.rs  psbt.rs
scripts/: Cargo.toml
scripts/src/: address.rs  category.rs  convert.rs  hlc.rs  lib.rs  parser.rs  taproot.rs  tree.rs  types.rs
slip132/: Cargo.toml  README.md
slip132/src/: lib.rs
src/: address.rs  bip32.rs  blockchain.rs  descriptor.rs  features.rs  hlc.rs  lex_order.rs  lib.rs  network.rs  pubkey_deriver.rs  pubkey_parser.rs  resolvers.rs  script_types.rs  slice32.rs  tweak.rs
src/bip32/: components.rs  mod.rs  path.rs  pubkeychain.rs  range.rs  traits.rs  xpubref.rs
src/cli/: mod.rs
src/descriptor/: contract.rs  deduction.rs  derive.rs  generator.rs  legacy.rs  mod.rs  script.rs  typesystem.rs
src/psbt/: mod.rs  proprietary.rs  signer.rs  structure.rs
src/resolvers/: electrum.rs  mod.rs
src/script/: address.rs  mod.rs  parser.rs  types.rs
