[workspace]
members = [".", "slip132", "descriptors", "hd", "psbt", "scripts"]
default-members = ["."]
exclude = ["libbitcoin"]

[workspace.package]
version = "0.10.2"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
repository = "https://github.com/BP-WG/descriptor-wallet"
homepage = "https://lnp-bp.org"
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "README.md"
edition = "2021"
rust-version = "1.70.0" # due to clap

[workspace.dependencies]
amplify = "4.0.0"
secp256k1 = { version = "0.27.0", features = ["global-context"] }
bitcoin = "0.30.1"
bitcoin_scripts = { version = "0.10.0", path = "./scripts" }
bitcoin_hd = { version = "0.10.0", path = "./hd" }
descriptors = { version = "0.10.0", path = "./descriptors", default-features = false }
psbt = { version = "0.10.0", path = "./psbt", default-features = false }
slip132 = { version = "0.10.0", path = "./slip132" }
miniscript_crate = { package = "miniscript", version = "10.0.0" }
electrum-client = "0.17.0"
serde_crate = { package = "serde", version = "1", features = ["derive"] }
serde_with = { version = "2.3", features = ["hex"] }
chrono = "0.4.19"

[package]
name = "descriptor-wallet"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Libraries and command line tool for building descriptor-based bitcoin wallets"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "descriptor", "miniscript"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = [".github", "contrib", "slip132", "libbitcoin", "descriptors", "scripts", "hd", "psbt"]

[lib]
name = "wallet"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "btc-hot"
required-features = ["hot", "cli"]

[[bin]]
name = "btc-cold"
required-features = ["cli"]

[[bin]]
name = "btc-expl"
required-features = ["cli", "compiler"]

[dependencies]
amplify = { workspace = true }
bitcoin = { workspace = true }
bitcoin_scripts = { workspace = true }
bitcoin_hd = { workspace = true }
descriptors = { workspace = true }
psbt = { workspace = true }
slip132 = { workspace = true }
miniscript_crate = { workspace = true, optional = true }
hwi = { version = "0.7.0", optional = true }
electrum-client = { workspace = true, optional = true }
serde_crate = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
serde_yaml = { version = "0.9", optional = true }
chrono = { workspace = true }
clap = { version = "4.1.13", optional = true, features = ["derive"] }
bip39 = { version = "2.0.0", optional = true }
aes = { version = "0.8.2", optional = true }
rpassword = { version = "7.2.0", optional = true }
colored = { version = "2", optional = true }

[dev-dependencies]
bitcoin = { version = "0.30.1", features = ["rand"] }

[features]
default = []
all = [
    "mobile",
    "miniscript",
    "electrum",
    "keygen",
    "construct",
    "compiler",
    "sign",
    "hwi",
    "hot",
    "cli",
    "serde",
]
mobile = ["miniscript", "compiler", "electrum", "hot", "construct"]
miniscript = [
    "bitcoin_hd/miniscript",
    "descriptors/miniscript",
    "psbt/miniscript",
]
compiler = ["miniscript", "miniscript_crate/compiler"]
electrum = [
    "electrum-client",
]
sign = ["psbt/sign"]
construct = ["psbt/construct"]
hot = [
    "keygen",
    "bip39",
    "aes",
    "rpassword",
    "sign"
]
cli = [
    "hwi",
    "electrum",
    "construct",
    "miniscript",
    "miniscript_crate",
    "serde",
    "colored",
    "clap",
    "serde_yaml",
    "bitcoin/base64"
]
keygen = ["bitcoin/rand", "amplify/rand", "descriptors/rand"]
serde = [
    "slip132/serde",
    "bitcoin_hd/serde",
    "psbt/serde",
    "descriptors/serde"
]
