[package]
name = "descriptors"
version = "0.9.0-alpha.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Bitcoin descriptors library (part of descriptor-wallet)"
repository = "https://github.com/LNP-BP/descriptor-wallet"
homepage = "https://github.com/LNP-BP/descriptor-wallet/tree/master/descriptors"
keywords = ["bitcoin", "wallet", "cryptocurrency", "descriptor", "bip32"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = []

[dependencies]
amplify = "3.13.0"
strict_encoding = "2.0.0-alpha.2"
bitcoin = "0.29.2"
bitcoin_scripts = "0.9.0-alpha.1"
bitcoin_blockchain = "0.9.0-alpha.1"
bitcoin_hd = { version = "0.9.0-alpha.1", path = "../hd" }
miniscript = { version = "9.0.0", features = ["compiler"], optional = true }
chrono = "0.4.19"
serde_crate = { package = "serde", version = "1", optional = true }
serde_with = { version = "1.12", optional = true }

[features]
all = [
    "rand",
    "miniscript",
    "serde"
]
default = []
rand = [
    "bitcoin/rand",
    "amplify/rand"
]
serde = [
    "serde_crate",
    "serde_with",
    "bitcoin_scripts/serde"
]
