[package]
name = "descriptors"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Bitcoin descriptors library (part of descriptor-wallet)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "descriptor", "bip32"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = []

[dependencies]
amplify = { workspace = true }
bitcoin = { workspace = true }
bitcoin_scripts = { workspace = true }
bitcoin_hd = { workspace = true }
miniscript_crate = { workspace = true, features = ["compiler"], optional = true }
chrono = { workspace = true }
serde_crate = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[features]
all = [
    "rand",
    "miniscript",
    "serde"
]
default = []
rand = [
    "bitcoin/rand",
    "amplify/rand"
]
miniscript = [
    "miniscript_crate",
    "bitcoin_hd/miniscript"
]
serde = [
    "serde_crate",
    "serde_with",
    "bitcoin_scripts/serde"
]
