[package]
name = "bitcoin_hd"
version = "0.9.0-alpha.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Bitcoin hierarchical deterministic wallet library"
repository = "https://github.com/BP-WG/bp-wallet"
homepage = "https://github.com/BP-WG/bp-wallet/tree/master/hd"
keywords = ["bitcoin", "wallet", "cryptocurrency", "cryptography", "bip32"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = []

[dependencies]
amplify = "3.13.0"
strict_encoding = "2.0.0-alpha.1"
bitcoin = "0.29.2"
secp256k1 = { version = "0.24.1", features = ["global-context"] }
slip132 = { version = "0.9.0-alpha.1", path = "../slip132" }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", features = ["hex"], optional = true }

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/serde", "slip132/serde"]
