[package]
name = "bitcoin_hd"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Bitcoin hierarchical deterministic derivation library"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "cryptography", "bip32"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = []

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
miniscript_crate = { workspace = true, optional = true }
slip132 = { workspace = true }
serde_crate = { workspace = true, optional = true }

[features]
default = []
all = ["serde", "miniscript"]
serde = ["serde_crate", "bitcoin/serde"]
miniscript = ["miniscript_crate"]
