[package]
name = "libbitcoin"
version = "0.1.0-alpha"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "C library for building descriptor-based bitcoin wallets"
repository = "https://github.com/rust-bitcoin/descriptor-wallet"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "wallet", "cryptocurrency", "cryptography", "bip32"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "../README.md"
edition = "2018"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
amplify = "3"
amplify_derive = "2.4"
bitcoin = "0.26"
bip39 = "1.0.0-rc1"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5"
serde_with_macros = "~1.2.0" # Fix for the problem in 1.3.0
serde_json = "1"
