[package]
name = "libbitcoin"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "C library for building descriptor-based bitcoin wallets"
repository = "https://github.com/rust-bitcoin/descriptor-wallet"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "wallet", "cryptocurrency", "cryptography", "bip32"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
amplify = "3.12.1"
amplify_derive = "2.11.2"
bitcoin = "0.28.1"
bip39 = "1.0.1"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5"
serde_with_macros = "1.4.2"
# serde_with_macros = "~1.2.0" # Fix for the problem in 1.3.0
serde_json = "1"
