[package]
name = "libbitcoin"
version = "0.5.0-alpha.1"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "C library for building descriptor-based bitcoin wallets"
repository = "https://github.com/rust-bitcoin/descriptor-wallet"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "wallet", "cryptocurrency", "cryptography", "bip32"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
amplify = "3.14.2"
amplify_derive = "2.11.2"
bitcoin = "0.28.2"
bip39 = "2.0.0"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_with = "2.3.1"
serde_json = "1"

[workspace]
