[package]
name = "bitcoin_onchain"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Bitcoin descriptors library (part of descriptor-wallet)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "descriptor", "bip32"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = []

[dependencies]
amplify = { workspace = true }
bitcoin = { workspace = true }
bitcoin_hd = { workspace = true }
descriptors = { workspace = true, optional = true }
miniscript_crate = { workspace = true, optional = true }
electrum-client = { version = "0.13.0", optional = true }
chrono = { workspace = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }

[features]
default = []
all = ["miniscript_descriptors", "electrum", "serde"]
miniscript = ["miniscript_crate"]
miniscript_descriptors = [
    "miniscript",
    "descriptors",
    "descriptors/miniscript",
    "bitcoin_hd/miniscript"
]
electrum = ["electrum-client"]
serde = ["serde_crate"]
