[package]
name = "psbt"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Partially signed bitcoin transaction v0-2 library (bip174, bip370, bip371)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "psbt", "taproot"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = []

[dependencies]
amplify = { workspace = true }
bitcoin = { workspace = true, features = ["base64"] }
bitcoin_scripts = { workspace = true }
miniscript_crate = { workspace = true, optional = true }
base64 = "0.21.4"
serde_crate = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[features]
default = []
all = [
    "serde",
    "construct",
    "sign"
]
miniscript = ["miniscript_crate"]
construct = [
    "miniscript",
]
sign = [
    "bitcoin/rand",
    "miniscript",
]
serde = [
    "serde_crate",
    "serde_with",
    "bitcoin/serde",
    "bitcoin_scripts/serde",
]
