[package]
name = "psbt"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Partially signed bitcoin transaction v0-2 library (bip174, bip370, bip371)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "psbt", "taproot"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = []

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true }
bitcoin = { workspace = true, features = ["base64"] }
bitcoin_scripts = { workspace = true }
bitcoin_blockchain = { workspace = true }
bitcoin_hd = { workspace = true }
bitcoin_onchain = { workspace = true }
descriptors = { workspace = true, optional = true }
miniscript_crate = { workspace = true, optional = true }
base64 = "0.21.4"
serde_crate = { package = "serde", version = "1", optional = true }
serde_with = { version = "2.3", features = ["hex"], optional = true }

[dev-dependencies]
strict_encoding_test = "0.9.0"

[features]
default = []
all = [
    "serde",
    "construct",
    "sign"
]
miniscript = ["miniscript_crate"]
construct = [
    "descriptors",
    "miniscript",
    "descriptors/miniscript",
    "bitcoin_hd/miniscript"
]
sign = [
    "bitcoin/rand",
    "descriptors",
    "miniscript",
    "descriptors/miniscript",
    "bitcoin_hd/miniscript"
]
serde = [
    "serde_crate",
    "serde_with",
    "bitcoin/serde",
    "bitcoin_scripts/serde",
    "bitcoin_blockchain/serde"
]
