[package]
name = "bitcoin_scripts"
version = "0.7.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Bitcoin extended script types"
repository = "https://github.com/LNP-BP/descriptor-wallet"
homepage = "https://github.com/LNP-BP/descriptor-wallet/tree/master/scripts"
keywords = ["bitcoin", "wallet", "cryptocurrency", "cryptography", "bitcoin-script"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "../README.md"
edition = "2018"
exclude = []

[dependencies]
amplify = "3.12.0"
bitcoin = "0.28.0"
secp256k1 = { version = "0.22.1", features = ["global-context"] } # Remove after bitcoin #922
miniscript = { version = "7.0.0", optional = true }
strict_encoding = "1.8.0-rc.11"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", optional = true }
# TODO: Fork and add to amplify_derive in order to reduce number of externally-maintained dependencies in consensus-critical code
stability = "0.1.1"

[dev-dependencies]
secp256k1 = { version = "0.22.1", features = ["global-context"] }

[features]
default = []
all = ["serde", "miniscript", "unstable"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/use-serde"]
unstable = []
