[package]
name = "bitcoin_scripts"
version = "0.10.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Bitcoin extended script types"
repository = "https://github.com/BP-WG/bp-foundation"
homepage = "https://github.com/BP-WG/bp-foundation/tree/master/bitcoin_scripts"
keywords = ["bitcoin", "wallet", "cryptography", "bitcoin-script"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = []

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
amplify = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "2.3", optional = true }
# TODO: Fork and add to amplify_derive in order to reduce number of externally-maintained dependencies in consensus-critical code
stability = "0.1.1"

[features]
default = []
all = ["serde", "unstable"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/serde"]
unstable = []
