[package]
name = "slip132"
version = "0.9.0-alpha.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Bitcoin SLIP-132 standard implementation (parsing custom xpub/xpriv key formats)"
repository = "https://github.com/BP-WG/bp-wallet"
homepage = "https://github.com/BP-WG/bp-wallet/tree/master/slip132"
keywords = ["bitcoin", "wallet", "cryptocurrency", "cryptography", "bip32"]
categories = ["cryptography::cryptocurrencies", "encoding", "parsing"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = []

[lib]
name = "slip132"
path = "src/lib.rs"

[dependencies]
amplify = "3.13.0"
bitcoin = "0.29.2"
strict_encoding = { version = "2.0.0-alpha.2", optional = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", features = ["hex"], optional = true }

[features]
default = []
all = ["serde", "strict_encoding"]
serde = ["serde_crate", "serde_with"]
