[package]
name = "slip132"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Bitcoin SLIP-132 standard implementation (parsing custom xpub/xpriv key formats)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "slip132", "bip32"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = []

[lib]
name = "slip132"
path = "src/lib.rs"

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true, optional = true }
bitcoin = { workspace = true }
serde_crate = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[features]
default = []
all = ["serde", "strict_encoding"]
serde = ["serde_crate", "serde_with"]
