[package]
name = "slip132"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Bitcoin SLIP-132 standard implementation (parsing custom xpub/xpriv key formats)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["bitcoin", "wallet", "cryptocurrency", "slip132", "bip32"]
categories = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
exclude = []

[lib]
name = "slip132"
path = "src/lib.rs"

[dependencies]
amplify = { workspace = true }
bitcoin = { workspace = true }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "2.3", features = ["hex"], optional = true }

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with"]
